--- a/package.json
+++ b/package.json
@@ -11,18 +11,20 @@
   "license": "ISC",
   "dependencies": {
     "@types/node": "^14.14.35",
-    "foundry-pc-types": "gitlab:foundry-projects/foundry-pc/foundry-pc-types",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
     "@types/gulp": "^4.0.8",
     "@types/gulp-concat": "0.0.32",
+    "@types/gulp-sourcemaps": "0.0.34",
     "@types/gulp-uglify": "^3.0.6",
     "@types/jquery": "^3.5.5",
     "@types/through2": "^2.0.36",
     "del": "^6.0.0",
+    "foundry-pc-types": "gitlab:foundry-projects/foundry-pc/foundry-pc-types",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
+    "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-uglify": "^3.0.2",
     "handlebars": "^4.7.7",
