--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "devDependencies": {
     "@types/gulp": "^4.0.8",
     "@types/gulp-concat": "0.0.32",
+    "@types/gulp-sass": "^4.0.0",
     "@types/gulp-sourcemaps": "0.0.34",
     "@types/gulp-uglify": "^3.0.6",
     "@types/jquery": "^3.5.5",
@@ -24,6 +25,7 @@
     "foundry-pc-types": "gitlab:foundry-projects/foundry-pc/foundry-pc-types",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
+    "gulp-sass": "^4.1.0",
     "gulp-sourcemaps": "^3.0.0",
     "gulp-typescript": "^6.0.0-alpha.1",
     "gulp-uglify": "^3.0.2",
