--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "typescript": "^4.2.3"
   },
   "devDependencies": {
+    "@league-of-foundry-developers/foundry-vtt-types": "^0.7.9-5",
     "@types/gulp": "^4.0.8",
     "@types/gulp-concat": "0.0.32",
     "@types/gulp-sass": "^4.0.0",
@@ -22,7 +23,6 @@
     "@types/jquery": "^3.5.5",
     "@types/through2": "^2.0.36",
     "del": "^6.0.0",
-    "foundry-pc-types": "gitlab:foundry-projects/foundry-pc/foundry-pc-types",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-sass": "^4.1.0",
