--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
         "moduleResolution": "node",
         "target": "ES2019",
         "lib": ["DOM", "ES6", "ES2017", "ES2018", "ES2019"],
-        "types": ["foundry-pc-types", "node"],
-        "allowUmdGlobalAccess": true
+        "types": ["node"],
+        "allowUmdGlobalAccess": true,
     },
     "exclude": [
         "node_modules"
