--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/fs-extra": "^9.0.11",
     "@types/node": "^14.14.35",
+    "fs-extra": "^10.0.0",
     "typescript": "^4.2.3"
   },
   "devDependencies": {
