--- a/src/tsconfig.json
+++ b/src/tsconfig.json
@@ -1,7 +1,7 @@
 {
     "compilerOptions": {
         "target": "es2019",
-        "module": "commonjs",
+        "module": "es6",
         "lib": ["ESNext", "DOM"],
         "moduleResolution": "node",
         "esModuleInterop": true,
