--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,13 +33,6 @@ jobs:
         id: get-version
         run: echo "::set-output name=version::$(node ./.github/workflows/get-version.js)"
 
-      # Generate changelog for release body
-      - name: Changelog
-        id: Changelog
-        uses: scottbrenner/generate-changelog-action@master
-        env:
-          REPO: ${{ github.repository }}
-
       # Create a release for this specific version
       - name: Create Release
         id: create_version_release
@@ -47,8 +40,7 @@ jobs:
         with:
           allowUpdates: true # set this to false if you want to prevent updating existing releases
           name: ${{ steps.get-version.outputs.version }}
-          body: |
-            ${{ steps.Changelog.outputs.changelog }}
+          body: 'TODO: FILL DETAILS'
           draft: false
           prerelease: false
           token: ${{ secrets.GITHUB_TOKEN }}
