--- a/package.json
+++ b/package.json
@@ -7,16 +7,15 @@
     "build": "npm run build:packs && webpack --mode production",
     "build:dev": "npm run build:packs && webpack",
     "build:packs": "ts-node -r tsconfig-paths/register build-packs.ts",
+    "extractPacks": "ts-node -r tsconfig-paths/register extract-packs.ts",
     "lint": "eslint ./src --ext .ts",
     "lint:fix": "eslint ./src --ext .ts --fix"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/fs-extra": "^9.0.11",
-    "@types/node": "^14.14.35",
-    "@types/tooltipster": "0.0.30",
     "fs-extra": "^10.0.0",
+    "jquery": "^3.6.0",
     "luxon": "^1.27.0",
     "typescript": "^4.3.2",
     "webpack": "^5.42.0"
@@ -30,6 +29,10 @@
     "@types/through2": "^2.0.36",
     "@typescript-eslint/eslint-plugin": "^4.20.0",
     "@typescript-eslint/parser": "^4.20.0",
+    "@types/fs-extra": "^9.0.11",
+    "@types/node": "^14.14.35",
+    "@types/tooltipster": "0.0.30",
+    "@types/yargs": "^16.0.3",
     "copy-webpack-plugin": "^9.0.1",
     "css-loader": "^5.2.6",
     "del": "^6.0.0",
@@ -42,7 +45,9 @@
     "gulp-typescript": "^6.0.0-alpha.1",
     "handlebars": "^4.7.7",
     "husky": "^6.0.0",
+    "jsdom": "^16.6.0",
     "mini-css-extract-plugin": "^2.0.0",
+    "nedb-promises": "^5.0.0",
     "pixi.js": "^6.0.4",
     "prettier": "^2.3.1",
     "sass": "^1.35.1",
@@ -52,6 +57,7 @@
     "ts-loader": "^9.2.3",
     "ts-node": "^9.1.1",
     "webpack-cli": "^4.7.2",
-    "webpackbar": "^5.0.0-3"
+    "webpackbar": "^5.0.0-3",
+    "yargs": "^17.0.1"
   }
 }
