--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -15,11 +15,12 @@ jobs:
         uses: actions/setup-node@v1
         with:
           node-version: '14.x'
-          
+
       - name: Install
         run: npm install
-        
+
       - name: Build
+        working-directory: ./
         run: npm run build
 
       # create a zip file with all files required by the module to add to the release
